# fyp-1

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  ASSISTANT_DEMO_SCRIPT.md  ASSISTANT_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_QUICKSTART.md  Dockerfile  ENSEMBLE_DEPLOYMENT.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STATUS.md  FREE_DEPLOYMENT_GUIDE.md  FRONTEND_ENSEMBLE_INTEGRATION.md  KAGGLE_TRAINING_NOTEBOOK.md  Kaggle_UNet_Training_FIXED.ipynb  LSTM_TRAINING_GUIDE.md  MODULE_10_COMPLETE.md  MODULE_10_SECURITY.md  NEW_FEATURES_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRODUCTION_LSTM_TRAINING_PLAN.md  PROJECT_STATUS_COMPLETE.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  SUPERVISOR_DEMO_GUIDE.md  TESTING_CHECKLIST_QUICK.md  TRAINING_STATUS_QUICK_REF.md  VERCEL_BRANCH_FIX.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX_README.md  WHATS_NEXT.md  advanced_ml_report.json  apply_migration.py  apply_migration_add_created_at.py  apply_migration_postgres.py  benchmark_performance.py  (+55 more)
api/: __init__.py  main.py
backend/app/: database.py  database_config.py  main.py  test_db_connection.py
data/growth_prediction/: patient_histories.json
database/: add_collaboration_tables.sql  add_created_at_column.sql  add_doctor_assessment_fields.sql  add_doctor_profile_fields.sql  add_missing_columns.sql  add_multi_doctor_support.sql  add_notes_column.sql  add_performance_indexes.sql  setup_database.sql
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vercel.json
(+87 files in other folders)
